crates/pixi_build_frontend/tests/integration/snapshots/integration__discovery__discovery@invalid.snap
---
source: crates/pixi_build_frontend/tests/integration/discovery.rs
expression: error_to_snapshot(& err)
input_file: tests/data/discovery/invalid/TEST-CASE
---
  × missing field 'channels' in table
   ╭─[file://<ROOT>/pixi.toml:1:1]
 1 │ [workspace]
   · ────────────
   ╰────
