crates/pixi_build_frontend/tests/integration/snapshots/integration__discovery__discovery@simple.snap
---
source: crates/pixi_build_frontend/tests/integration/discovery.rs
expression: backend
input_file: tests/data/discovery/simple/TEST-CASE
---
backend-spec:
  type: json-rpc
  name: pixi_build_backend
  command:
    type: environment-spec
    requirement:
      - pixi_build_backend
      - version: "*"
    channels:
      - "https://prefix.dev/pixi-build-backends"
init-params:
  source-dir: "[SOURCE_PATH]"
  manifest-path: pixi.toml
  project-model:
    name: simple
    version: 0.1.0
    description: ~
    authors: ~
    license: ~
    licenseFile: ~
    readme: ~
    homepage: ~
    repository: ~
    documentation: ~
    targets:
      defaultTarget:
        hostDependencies: {}
        buildDependencies: {}
        runDependencies: {}
      targets: {}
  configuration: ~
