crates/pixi_build_frontend/tests/integration/snapshots/integration__discovery__non_existing.snap
---
source: crates/pixi_build_frontend/tests/integration/discovery.rs
expression: error_to_snapshot(& err)
---
  × failed to discover a valid project manifest, the source path '/non-existing' could not be found
